# mindwerks.net

./: mkdocs.yml  poetry.toml  pyproject.toml  setup_venv.sh
docs/: index.md
site/: 404.html  index.html
site/search/: search_index.json
